tests/integration/snapshots/integration__conformance__n_structure_array_with_extra_array_close.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1]]
stderr ---
error: unexpected token `]` after json finished
 --> stdin:1:4
  |
1 | [1]]
  |    ^
  |
help: consider removing the trailing content (starting with `]`)
  |
1 - [1]]
1 + [1]
  |
